# ptcgpbuilder

./: .gitignore  README.md  main.py  pokemon_cards_celestialguardians.json  pokemon_cards_geneticapex.json  pokemon_cards_mythicalisland.json  pokemon_cards_shiningrevelry.json  pokemon_cards_space-timesmackdown.json  pokemon_cards_triumphantlight.json  pokemon_tcg.db  pokemontcgapp_css.tcss  pyproject.toml  pyrightconfig.json  pyvenv.cfg  requirements.txt  run  test_design.py
exports/: croagunk_1744405195262878000.txt  giratina mewtwo_1744824966741599000.txt
src/: db_updater.py  fix_card_names.py  fix_card_names_local.py  main.py  pokemon_cards_geneticapex.json  pokemon_cards_mythicalisland.json  pokemon_cards_shiningrevelry.json  pokemon_cards_triumphantlight.json  scrape_all_sets.py  scrape_pokemon_cards.py
src/db/: pokemon_tcg.db
src/tcss/: pokemontcgapp_css.tcss
src/utils/: db_management.py  db_updater.py  import_cards.py  logger.py  scrape_all_sets.py  scrape_all_trainer_cards.py  scrape_pokemon_cards.py  scrape_pokemon_tools.py
src/utils/card_functions/: card_management.py  populate_cards_list.py  populate_decks_list.py
src/views/: AddToDeckModal.py  BuilderView.py  CreateEmptyDeckModal.py  DeckView.py  PokemonCard.py
