[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ptcgpbuilder"
version = "0.1.0"
description = "Pokemon TCG Pocket Builder - A deck building tool for Pokemon TCG Pocket"
readme = "README.md"
authors = [
    {name = "Minotaurosu"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"
dependencies = [
    "textual>=0.34.0",
    "beautifulsoup4>=4.12.0",
    "requests>=2.28.0",
    "pillow>=9.3.0",
    "rich-pixels>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "pytest",
    "pytest-cov",
]

[project.scripts]
ptcgpbuilder = "ptcgpbuilder.main:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["ptcgpbuilder"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError",
] 